--- a/templates/Products/categories.html
+++ b/templates/Products/categories.html
@@ -32,7 +32,7 @@
                         <!-- Edit Button -->
                         <a href="{{ url_for('edit_category', category_id=category.id) }}"
                            class="btn btn-sm btn-outline-primary me-1">
-                            <i class="bi bi-pencil"></i>
+                            <i class="bi bi-pencil">Edit</i>
                         </a>
 
                         <!-- Delete Button -->
@@ -41,7 +41,7 @@
                               class="d-inline"
                               onsubmit="return confirm('Delete this category?');">
                             <button class="btn btn-sm btn-outline-danger">
-                                <i class="bi bi-trash"></i>
+                                <i class="bi bi-trash">Delete</i>
                             </button>
                         </form>
 
@@ -62,3 +62,4 @@
 </div>
 
 {% endblock %}
+
