--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -50,10 +50,10 @@
 
                 <!-- LOW STOCK THRESHOLD -->
                 <div class="col-md-4">
-                    <label class="form-label fw-bold">Low Stock Threshold</label>
+                    <label class="form-label fw-bold">Low Stock</label>
                     <input type="number" name="low_stock_threshold"
                            class="form-control" min="0" value="10" required>
-                    <small class="text-muted">Product shows low stock alert when stock ≤ threshold</small>
+                    
                 </div>
 
                 <!-- IMAGE -->
@@ -61,7 +61,7 @@
                     <label class="form-label fw-bold">Upload Image</label>
                     <input type="file" id="imageInput" name="image" accept="image/*"
                            class="form-control">
-                    <small class="text-muted">Optional • JPG, PNG, WEBP supported</small>
+                    <small class="text-muted">Optional • JPG, PNG, WEBP supported(MAX 2MB)</small>
 
                     <!-- LIVE PREVIEW -->
                     <img id="previewImage" class="img-fluid rounded mt-3 d-none"
@@ -102,3 +102,4 @@ document.getElementById("imageInput").addEventListener("change", function (evt) 
 </script>
 
 {% endblock %}
+
