--- a/templates/Products/categories.html
+++ b/templates/Products/categories.html
@@ -33,14 +33,14 @@
             <td class="text-center">
                 <a href="{{ url_for('edit_category', category_id=category.id) }}"
                    class="btn btn-sm btn-outline-primary">
-                    <i class="bi bi-pencil"></i>
+                    <i class="bi bi-pencil">Edit</i>
                 </a>
 
                 <form action="{{ url_for('delete_category', category_id=category.id) }}"
                       method="POST" class="d-inline"
                       onsubmit="return confirm('Delete this category?');">
                     <button class="btn btn-sm btn-outline-danger">
-                        <i class="bi bi-trash"></i>
+                        <i class="bi bi-trash">Delete</i>
                     </button>
                 </form>
             </td>
@@ -60,5 +60,6 @@
 </div>
 
 {% endblock %}
+
 
 
